--- a/Evaluation/index.html
+++ b/Evaluation/index.html
@@ -11,10 +11,11 @@
 <body>
     <div class="container-fluid">
         <header class="row headr">
+            <div class="mt-3"><img id="logo-wwf" src="images/WWF-removed.png" alt="logo-wwf"></div>
             <div class="container h-100">
                 <div class="row h-100 align-items-center">
                     <div class="col-12 text-center">
-                        <h1 class="font-weight-light text-headr">TAKE ACTION.</h1>
+                        <h1 class="font-weight-light text-headr text-center">TAKE ACTIONS.</h1>
                         <!--<p class="lead text-headr-lil">Ils sont en danger</p>-->
                     </div>
                 </div>
@@ -25,7 +26,24 @@
                       </svg>
                 </a>
             </div>
-          </header>          
+          </header>
+          
+          <!--DIV WWF & DON-->
+          <div class="row d-flex flex-row" id="don-wwf">
+              <!--WWF-->
+            <div id="div-wwf" class="text-center text-sm-center text-md-center text-lg-center text-xl-center">
+                <button id="btn-wwf" class="mt-4"><a class="div-hyperlink" href="google.fr">WWF.fr</a></button>
+            </div>
+                <!--DON-->
+            <div id="div-don" class="text-center text-sm-center text-md-center text-lg-center text-xl-center">
+                <button id="btn-don" class="mt-4">FAITES UN DON</button>
+            </div>
+          </div>
+
+          <!--CONTENT-->
+          <div>
+              <div></div>
+          </div>
     </div>
 
 
