HTML and CSS progressing

--- a/Evaluation/index.html
+++ b/Evaluation/index.html
@@ -42,10 +42,16 @@
 
           <!--CONTENT-->
           <div class="content mt-5" id="content">
-              <div id="paragraphe1">
-                  <h3 class="text-center mt-2">QUI SOMMES-NOUS ?</h3>
-                  <p class="text-justify text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis tenetur provident nam sed omnis suscipit nemo iure consectetur ex, obcaecati eius minus quo aut odit! Minus veniam porro pariatur. Maxime.</p>
+              <div id="paragraphe" class="paragraphe">
+                  <h3 class="text-center mt-2 mb-4">QUI SOMMES-NOUS ?</h3>
+                  <p class="text-justify text-center mb-5 p-1">
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis tenetur provident nam sed omnis suscipit nemo iure consectetur ex, obcaecati eius minus quo aut odit! Minus veniam porro pariatur. Maxime.</p>
               </div>
+              <div class="paragraphe">
+                <h3 class="text-center mt-5">QUE FAISONS-NOUS ?</h3>
+                <p class="text-justify text-center mt-3 p-1">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa excepturi inventore deleniti nulla veritatis laudantium, ut iusto. Architecto beatae ipsam vitae non necessitatibus quas repellendus ad consectetur atque molestias? Iusto.</p>
+                </div>
           </div>
     </div>
 
