html & css: 2nd page nearly done, articles done, mep done

--- a/Evaluation/index.html
+++ b/Evaluation/index.html
@@ -19,7 +19,7 @@
                 <div class="container h-100">
                     <div class="row h-100 align-items-center">
                         <div class="col-12 text-center">
-                            <h1 class="font-weight-bold text-headr text-center">TAKE ACTIONS.</h1>
+                            <h1 class="text-center display-1">TAKE ACTIONS.</h1>
                             <!--<p class="lead text-headr-lil">Ils sont en danger</p>-->
                         </div>
                     </div>
@@ -37,7 +37,7 @@
         <div class="row" id="don-wwf">
                             <!--DON-->
             <div id="div-don" class="text-center text-sm-center text-md-center text-lg-center text-xl-center">
-                    <button id="btn-don" class="btn-don my-2">FAITES UN DON</button>
+                    <button id="btn-don" class="btn-don my-2"><h2>FAITES UN DON</h2></button>
             </div>
         </div>
     
@@ -61,7 +61,7 @@
                         <p class="text-justify text-center mt-3 p-1">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa excepturi inventore deleniti nulla veritatis laudantium, ut
                             iusto. Architecto beatae ipsam vitae non necessitatibus quas repellendus ad consectetur atque molestias? Iusto.</p>
-                            <p class="text-justify text-center mt-3 p-1">N'hésitez pas à consulter notre <a href="#">Calendrier d'Actions 2021</a> !</p>    
+                            <p class="text-justify text-center mt-3 p-1">N'hésitez pas à consulter notre <a href="actions.html">Calendrier d'Actions 2021</a> !</p>    
                     </div>
                 </article>
 
@@ -106,12 +106,12 @@
                     <a href="#don-wwf"><span class="list-group-item rounded">FAIRE UN DON
                     </span></a>
                 </div>
-                <ul class="text-center mx-2 my-2 list-group list-group-horizontal">
+                <!--<ul class="text-center mx-2 my-2 list-group list-group-horizontal">
                     <a href="#Qui"><li class="list-group-item mx-1 rounded">Qui sommes-nous ?</li></a>
                     <a href="#Quoi"><li class="list-group-item mx-1 rounded">Que faisons-nous ?</li></a>
                     <a href="#Pourquoi"><li class="list-group-item mx-1 rounded">Pourquoi le faisons-nous ?</li></a>
                     <a href="#Comment"><li class="list-group-item mx-1 rounded">Nos campagnes</li></a>  
-                </ul>
+                </ul>-->
                 <div class="row mx-2 mt-2 mb-1 list-group list-group-horizontal text-center">
                     <a href="#don-wwf"><span class="list-group-item rounded">REJOIGNEZ L'ACTION
                     </span></a>
