--- a/Evaluation/actions.html
+++ b/Evaluation/actions.html
@@ -1,86 +1,143 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Actions</title>
-    <link rel="stylesheet" href="style.css">
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Actions</title>
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-     crossorigin="anonymous">
-     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
+
 <body>
-    <div class="container-fluid"></div>
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark" id="navbar">
-        <a class="navbar-brand" href="#">WWF</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-          <span class="navbar-toggler-icon"></span>
-        </button>
+        <!-- NAVBAR -->
+    <nav class="shadow navbar navbar-expand-md bg-light navbar-light" id="navbar">
+            <a class="navbar-brand" href="index.html"><img class="logo" src="images/WWF-removed.png" alt=""></a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <span class="navbar-toggler-icon"></span>
+            </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Accueil</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Nos champs d'actions</a>
-            </li> 
-          </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link" href="index.html">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Nos champs d'actions</a>
+                    </li> 
+            </ul>
         </div>  
-      </nav>
-        <div class="content">
-            <div class="row">
-                <h3 class="text-center mt-1 mb-5 pb-5">DERNIÈREMENT</h3>
-                <section class="d-flex flex-column justify-content-around">
-                    <div class="month "><span class="monthName mb-4">DÉCEMBRE 2020</span>
-                        <div class="actu">
+    </nav>
+
+        <div class="container-fluid">
+        <!-- DISCLAIMER -->
+        <section class="content">
+            <h3 class="text-center mt-5 mb-3">CE QU'IL S'EST PASSÉ CETTE ANNÉE</h3>
+            <p class="disclaimer mt-5">Madame, Monsieur, chers engagés (ou dans un futur proche, on l'espère), compte tenu de la situation sanitaire actuelle, beaucoup de nos évènements ont dûs être annulés et reportés. <br>
+            Nous faisons notre maximum pour vous permettre de nous aider très prochainement lors de divers évenèments : conférences, rassemblements et des manifestations.<br>
+            En vous remerciant pour vos actions envers <strong>WWF</strong>, n'oubliez pas de vous abonner à notre newsletter afin d'être les premiers au courant à propos des dates des prochains évènements.</p>
+            
+            <h3 class="text-center mt-5 mb-5">ACTUALITÉS</h3>
+            <!-- COLLAPSIBLE -->
+            <div id="accordion">
+                <div class="card mb-1">
+                    <div class="card-header" id="headingOne">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                DÉCEMBRE
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
+                        <div class="card-body">
+                            <h4 class="mt-2 pt-2">LA BIODIVERSITÉ EN SURSIS</h4>
+                            <p class="text-justify">Le programme mondial « Vie Sauvage » s’emploie à sauvegarder les espèces terrestres menacées les plus emblématiques d’un point de vue écologique, culturel et économique dont la survie est menacée et dont la protection requiert une action concertée au niveau international.
+                            </p>
+                        </div>
+                        <div class="card-body">
                             <h4 class="mt-4 pt-2">Titre de l'actu</h4>
-                            <p class="text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa ad sequi porro voluptatum doloremque sit suscipit, ex tempora illo aliquam quibusdam quo soluta! Odit repellendus totam dolore sit neque.</p>
-                            <img src="images/bg-footer.jpeg" alt="" class="img-actu">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                            </p>
                             <button href="#" type="button" class="btn btn-dark btn-actu">En savoir plus</button>
                         </div>
-                        <div class="actu">
+                        <div class="card-body">
                             <h4 class="mt-4 pt-2">Titre de l'actu</h4>
-                            <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
-                            </p>
-                            <img src="images/bg-footer.jpeg" alt="" class="img-actu text-center">
-                            <button href="#" type="button" class="btn btn-dark btn-actu">En savoir plus</button>
-                        </div>
-                    </div>
-                    <div class="month"><span class="monthName">NOVEMBRE 2020</span>
-                        <div class="actu">
-                            <h4 class="mt-4 pt-2">Titre de l'actu</h4>
-                            <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa ad sequi porro voluptatum doloremque sit suscipit, ex tempora illo aliquam quibusdam quo soluta! Odit repellendus totam dolore sit neque.</p> 
-                        </div>
-                        <div class="actu">
-                            <h4 class="mt-4 pt-2">Titre de l'actu</h4>
-                            <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
-                            </p>
-                        </div>
-                        <div class="actu">
-                            <h4 class="mt-4 pt-2">Titre de l'actu</h4>
-                            <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus culpa ad sequi porro voluptatum doloremque sit suscipit, ex tempora illo aliquam quibusdam quo soluta! Odit repellendus totam dolore sit neque.</p> 
-                        </div>
-                        <div class="actu">
-                            <h4 class="mt-4 pt-2">Titre de l'actu</h4>
-                            <p></p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
                             </p>
                         </div>
                     </div>
+                </div>
+                    <div class="card mb-1">
+                        <div class="card-header" id="headingTwo">
+                            <h5 class="mb-0">
+                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                    AUTOMNE 2020 
+                            </h5>
+                        </div>
+                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
+                            <div class="card-body">
+                                <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                </p>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                </p>
+                                <button href="#" type="button" class="btn btn-dark btn-actu">En savoir plus</button>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                </p>
+                                <button href="#" type="button" class="btn btn-dark btn-actu">En savoir plus</button>
+                            </div>
+                            <div class="card-body">
+                                <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                        <div class="card mb-5">
+                            <div class="card-header" id="headingThree">
+                                <h5 class="mb-0">
+                                    <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                    ÉTÉ 2020
+                                    </button>
+                                </h5>
+                            </div>
+                            <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
+                                <div class="card-body">
+                                    <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                    </p>
+                                    <button href="#" type="button" class="btn btn-dark btn-actu">En savoir plus</button>
+                                </div>
+                                <div class="card-body">
+                                    <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                    </p>
+                                </div>
+                                <div class="card-body">
+                                    <h4 class="mt-4 pt-2">Titre de l'actu</h4>
+                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis voluptatibus numquam, repellat vitae eos dolorum suscipit? Praesentium laudantium, expedita dolorem, perspiciatis non rem adipisci nostrum accusamus nemo sunt sapiente illum.
+                                    </p>
+                                    <button href="#" type="button" class="btn btn-dark btn-actu">En savoir plus</button>
+                                </div>
+                            </div>
+                        </div>
             </div>
-        </div>
-    </div>
-    <a href="#navbar" class="back-to-top">
-        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-up-square" viewBox="0 0 16 16">
-            <path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
-            <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"/>
-          </svg>
-    </a>
-    <footer>
+        </section>
+
+        <!-- FOOTER -->
+    <footer class="mt-5 p-2">
         <p class="text-center mb-1 py-1" id="signature">2020</p>
                 <p class="text-center text-justify" id="info">66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu.
-                        Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique.
-                        Numéro d’enregistrement et SIREN : 302 518 667.
+                Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique.
+                Numéro d’enregistrement et SIREN : 302 518 667.
         </p>
     </footer>
 
