html & css: media queries done

--- a/Evaluation/actions.html
+++ b/Evaluation/actions.html
@@ -14,7 +14,7 @@
 
 <body>
         <!-- NAVBAR -->
-    <nav class="shadow navbar navbar-expand-md bg-light navbar-light" id="navbar">
+    <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
             <a class="navbar-brand" href="index.html"><img class="logo" src="images/WWF-removed.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
@@ -30,12 +30,19 @@
             </ul>
         </div>  
     </nav>
+    <!-- BREADCRUMB -->
+    <div aria-label="breadcrumb">
+        <ol class="breadcrumb">
+          <li class="breadcrumb-item ml-2"><a href="index.html">Accueil</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Nos Actions</li>
+        </ol>
+    </div>
 
         <div class="container-fluid">
         <!-- DISCLAIMER -->
         <section class="content">
-            <h3 class="text-center mt-5 mb-3">CE QU'IL S'EST PASSÉ CETTE ANNÉE</h3>
-            <p class="disclaimer mt-5">Madame, Monsieur, chers engagés (ou dans un futur proche, on l'espère), compte tenu de la situation sanitaire actuelle, beaucoup de nos évènements ont dûs être annulés et reportés. <br>
+            <h3 class="text-center mt-3 mb-3">CE QU'IL S'EST PASSÉ CETTE ANNÉE</h3>
+            <p class="disclaimer mt-5">Madame, Monsieur, chers engagés, sympathisants, compte tenu de la situation sanitaire actuelle, beaucoup de nos évènements ont dûs être annulés et reportés. <br>
             Nous faisons notre maximum pour vous permettre de nous aider très prochainement lors de divers évenèments : conférences, rassemblements et des manifestations.<br>
             En vous remerciant pour vos actions envers <strong>WWF</strong>, n'oubliez pas de vous abonner à notre newsletter afin d'être les premiers au courant à propos des dates des prochains évènements.</p>
             
