--- a/Evaluation/actions.html
+++ b/Evaluation/actions.html
@@ -14,19 +14,21 @@
 
 <body>
         <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
-            <a class="navbar-brand" href="index.html"><img class="logo" src="images/WWF-removed.png" alt=""></a>
+        <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
             </button>
         <div class="collapse navbar-collapse" id="collapsibleNavbar">
             <ul class="navbar-nav">
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <a class="nav-link" href="index.html">Accueil</a>
                 </li>
-                <li class="nav-item">
+                <li class="nav-item mx-2">
                     <a class="nav-link active" href="#">Nos champs d'actions</a>
-                    </li> 
+                </li>
+                <li class="nav-item mx-2">
+                    <a class="nav-link" href="index.html">Nous rejoindre</a>
+                </li> 
             </ul>
         </div>  
     </nav>
@@ -140,7 +142,7 @@
         </section>
 
         <!-- FOOTER -->
-    <footer class="mt-5 p-2">
+    <footer class="row mt-5 p-2">
         <p class="text-center mb-1 py-1" id="signature">2020</p>
                 <p class="text-center text-justify" id="info">66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu.
                 Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique.
