html & css: add donation and join-us pages

--- a/Evaluation/actions.html
+++ b/Evaluation/actions.html
@@ -15,6 +15,7 @@
 <body>
         <!-- NAVBAR -->
         <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
+            <a class="navbar-brand" href="#"><img class="logo" src="images/WWF-removed.png" alt="logo-wff"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -142,17 +143,32 @@
         </section>
 
         <!-- FOOTER -->
-    <footer class="row mt-5 p-2">
-        <p class="text-center mb-1 py-1" id="signature">2020</p>
-                <p class="text-center text-justify" id="info">66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu.
-                Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique.
-                Numéro d’enregistrement et SIREN : 302 518 667.
+    <!--FOOTER-->
+    <footer class="row d-flex justify-content-center">
+        <div class="row col-6 mx-2 mt-5 list-group list-group-horizontal text-center">
+            <a href="don.html"><span class="shadow list-group-item rounded my-2">FAIRE UN DON
+            </span></a>
+            <a href="join.html"><span class="shadow list-group-item rounded my-2">REJOIGNEZ L'ACTION
+            </span></a>
+        </div>
+        <p class="text-center mb-1" id="signature">2020</p>
+        <p class="text-center text-justify" id="info">
+            66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu. <br>
+            Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique. <br>
+            Numéro d’enregistrement et SIREN : 302 518 667.
         </p>
-    </footer>
+        <p class="text-center text-justify" id="etoile">
+            * : Votre don de 10€ ne vous coûte réellement que 3€ après déduction fiscale, celui de 50€ ne coûte réellement que 17€, et le dernier de 100€  que 33€ après déduction fiscale.
+        </p>
+        <p class="text-center text-justify" id="credit">
+            Crédits : Adobe Stock
+        </p>
+
+</footer>  
 
 
+</body>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
 </html>
