--- a/Evaluation/actions.html
+++ b/Evaluation/actions.html
@@ -14,37 +14,41 @@
 
 <body>
         <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
-            <a class="navbar-brand" href="#"><img class="logo" src="images/WWF-removed.png" alt="logo-wff"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-            <span class="navbar-toggler-icon"></span>
+    <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
+        <a class="navbar-brand" href="#">
+            <img class="logo" src="images/WWF-removed.png" alt="logo-wff"></a>
+            <button class="mx-3 navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                <span class="navbar-toggler-icon"></span>
             </button>
-        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-            <ul class="navbar-nav">
-                <li class="nav-item mx-2">
-                    <a class="nav-link" href="index.html">Accueil</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link active" href="#">Nos champs d'actions</a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a class="nav-link" href="index.html">Nous rejoindre</a>
-                </li> 
-            </ul>
-        </div>  
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="index.html">Accueil</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link active" href="#">Nos champs d'actions</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="index.html">Nous rejoindre</a>
+                    </li> 
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="index.html">Faire un do</a>
+                    </li> 
+                </ul>
+            </div>  
     </nav>
     <!-- BREADCRUMB -->
     <div aria-label="breadcrumb">
         <ol class="breadcrumb">
-          <li class="breadcrumb-item ml-2"><a href="index.html">Accueil</a></li>
-          <li class="breadcrumb-item active" aria-current="page">Nos Actions</li>
+            <li class="breadcrumb-item ml-2"><a href="index.html">Accueil</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Nos Actions</li>
         </ol>
     </div>
 
         <div class="container-fluid">
         <!-- DISCLAIMER -->
         <section class="content">
-            <h3 class="text-center mt-3 mb-3">CE QU'IL S'EST PASSÉ CETTE ANNÉE</h3>
+            <h3 class="text-center mt-3 mb-3">SITUATION ACTUELLE</h3>
             <p class="disclaimer mt-5">Madame, Monsieur, chers engagés, sympathisants, compte tenu de la situation sanitaire actuelle, beaucoup de nos évènements ont dûs être annulés et reportés. <br>
             Nous faisons notre maximum pour vous permettre de nous aider très prochainement lors de divers évenèments : conférences, rassemblements et des manifestations.<br>
             En vous remerciant pour vos actions envers <strong>WWF</strong>, n'oubliez pas de vous abonner à notre newsletter afin d'être les premiers au courant à propos des dates des prochains évènements.</p>
@@ -142,7 +146,6 @@
             </div>
         </section>
 
-        <!-- FOOTER -->
     <!--FOOTER-->
     <footer class="row d-flex justify-content-center">
         <div class="row col-6 mx-2 mt-5 list-group list-group-horizontal text-center">
@@ -163,11 +166,11 @@
         <p class="text-center text-justify" id="credit">
             Crédits : Adobe Stock
         </p>
-
-</footer>  
+    </footer>  
 
 
 </body>
+    <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
