--- a/Evaluation/don.html
+++ b/Evaluation/don.html
@@ -6,41 +6,167 @@
     <link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="bootstrap.min.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	 crossorigin="anonymous">
+     crossorigin="anonymous">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>Dons</title>
 </head>
-<body>
+<body style="background: rgb(255, 255, 250);">
     <!-- NAVBAR -->
-        <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
-                <a class="navbar-brand" href="#">
-                    <img class="logo" src="images/WWF-removed.png" alt="logo-wff"></a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="index.html">Accueil</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link active" href="#">Nos champs d'actions</a>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link" href="index.html">Nous rejoindre</a>
-                        </li> 
-                    </ul>
-                </div>  
-        </nav>
+    <nav class="navbar navbar-expand-md bg-light navbar-light" id="navbar">
+            <a class="navbar-brand" href="index.html">
+                <img class="logo" src="images/WWF-removed.png" alt="logo-wff"></a>
+                <button class="navbar-toggler mx-3" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            <div class="collapse navbar-collapse" id="collapsibleNavbar">
+                <ul class="navbar-nav">
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="index.html">Accueil</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="#">Nos champs d'actions</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link" href="index.html">Nous rejoindre</a>
+                    </li>
+                    <li class="nav-item mx-2">
+                        <a class="nav-link active" href="index.html">Faire un don</a>
+                    </li> 
+                </ul>
+            </div>  
+    </nav>
     <!-- BREADCRUMB -->
     <div aria-label="breadcrumb">
         <ol class="breadcrumb">
-        <li class="breadcrumb-item mx-5"><a href="index.html">Accueil</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Faire un don</li>
+          <li class="breadcrumb-item ml-2"><a href="index.html">Accueil</a></li>
+          <li class="breadcrumb-item active" aria-current="page">Faire un don</li>
         </ol>
     </div>
+
+    <div class="container-fluid">
+        <!--  RÈGLEMENT  -->
+        <div class="row mx-2">
+            <form class="form-group">
+                <div class="form-row">
+                    <div class="col-md-4 mb-4 ">
+                        <label for="form-numero">
+                            Numéro de carte bancaire
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-credit-card" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4zm2-1a1 1 0 0 0-1 1v1h14V4a1 1 0 0 0-1-1H2zm13 4H1v5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V7z"/>
+                                <path d="M2 10a1 1 0 0 1 1-1h1a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1v-1z"/>
+                            </svg>
+                        </label>
+                        <input type="text" class="form-control" id="form-numero" placeholder="0123 4567 8910 1112" value="" required>
+                    </div>
+                    <div class="col-xs-2 mb-4">
+                        <label for="form-date">Date de fin de validité</label>
+                        <input type="text" class="form-control" id="form-date" placeholder="12/21" value="" required>
+                    </div>
+
+                                <!--  POP UP CCV  -->
+                            <div id="ccvInfoHelp">
+                                    <div class="popupCCV">
+                                        <span id="ccvClose" style="float: right; cursor: pointer;">&times;</span>
+                                        <h2 class="text-center">
+                                            CCV, qu'est-ce que c'est ?
+                                        </h2>
+                                        <p class="text-justify">
+                                            Le code de vérification cvv est demandé lors de vos paiements en ligne. Pour les cartes VISA et MASTER, vous trouverez le code CVV à 3 chiffres au verso de votre carte sur la zone de signature.
+                                        </p>
+                                    </div>
+                            </div>
+
+                    
+                    <div class="col-xs-2 mb-4">
+                        <label for="form-code">
+                            Code CCV
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-question-circle" id="ccvHelp" viewBox="0 0 16 16">
+                                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
+                                <path d="M5.255 5.786a.237.237 0 0 0 .241.247h.825c.138 0 .248-.113.266-.25.09-.656.54-1.134 1.342-1.134.686 0 1.314.343 1.314 1.168 0 .635-.374.927-.965 1.371-.673.489-1.206 1.06-1.168 1.987l.003.217a.25.25 0 0 0 .25.246h.811a.25.25 0 0 0 .25-.25v-.105c0-.718.273-.927 1.01-1.486.609-.463 1.244-.977 1.244-2.056 0-1.511-1.276-2.241-2.673-2.241-1.267 0-2.655.59-2.75 2.286zm1.557 5.763c0 .533.425.927 1.01.927.609 0 1.028-.394 1.028-.927 0-.552-.42-.94-1.029-.94-.584 0-1.009.388-1.009.94z"/>
+                            </svg>
+                        </label>
+                        <input type="text" class="form-control" id="form-code" placeholder="CCV" value="" required>
+                    </div>
+            </form>
+        </div>
+        <!--  VOS CORDONNÉES  -->
+            <form class="needs-validation" novalidate>
+
+                <label for="monDon">Le montant de votre don</label>
+                <input id="monDon" class="form-control form-control-md mb-4" type="number" placeholder="Je donne 50€">
+
+                <div class="form-row">
+                  <div class="col-md-4 mb-1">
+                    <label for="form-prenom">Prénom</label>
+                    <input type="text" class="form-control" id="form-prenom" placeholder="Jean" value="" required>
+                  </div>
+                  <div class="col-md-4 mb-4">
+                    <label for="form-nom">Nom</label>
+                    <input type="text" class="form-control" id="form-nom" placeholder="Dupond" value="" required>
+                  </div>
+                  <div class="col-md-4 mb-3">
+                    <label for="form-mail">Adresse mail</label>
+                    <div class="input-group">
+                      <div class="input-group-prepend">
+                        <span class="input-group-text mb-4" id="inputGroupPrepend">@</span>
+                      </div>
+                      <input type="text" class="form-control" id="form-mail" placeholder="don@wwf.fr" aria-describedby="inputGroupPrepend" required>
+                      <div class="invalid-feedback">
+                        Votre adresse mail n'est pas valide
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="form-row">
+                  <div class="col-md-6 mb-1">
+                    <label for="form-adress">Adresse</label>
+                    <input type="text" class="form-control" id="form-adress" placeholder="101 Avenue de la Paix" required>
+                  </div>
+                  <div class="col-md-3 mb-3=1">
+                    <label for="form-ville">Ville</label>
+                    <input type="text" class="form-control" id="form-ville" placeholder="Paris" required>
+                  </div>
+                  <div class="col-md-3 mb-4">
+                    <label for="form-pays">Pays</label>
+                    <input type="text" class="form-control" id="form-pays" placeholder="France" required>
+                  </div>
+                </div>
+
+                <div class="form-check mb-4">
+                    <input class="form-check-input" type="radio" name="newsletter" id="newsletterInscription" value="option2">
+                    <label class="form-check-label" for="newsletterInscription">
+                      Je souhaite recevoir la newsletter de WWF France
+                    </label>
+                  </div>
+                <button class="btn btn-warning col-12 mb-5" type="submit" id="btn-validation">VALIDER MON DON</button>
+              </form>
+    </div>  
+
+     <!--FOOTER-->
+    <footer class="row d-flex justify-content-center mt-5">
+        <div class="row col-6 mx-2 mt-5 list-group list-group-horizontal text-center">
+            <a href="don.html"><span class="shadow list-group-item rounded my-2">FAIRE UN DON
+            </span></a>
+            <a href="join.html"><span class="shadow list-group-item rounded my-2">REJOIGNEZ L'ACTION
+            </span></a>
+        </div>
+        <p class="text-center mb-1" id="signature">2020</p>
+        <p class="text-center text-justify" id="info">
+            66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu. <br>
+            Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique. <br>
+            Numéro d’enregistrement et SIREN : 302 518 667.
+        </p>
+        <p class="text-center text-justify" id="etoile">
+            * : Votre don de 10€ ne vous coûte réellement que 3€ après déduction fiscale, celui de 50€ ne coûte réellement que 17€, et le dernier de 100€  que 33€ après déduction fiscale.
+        </p>
+        <p class="text-center text-justify" id="credit">
+            Crédits : Adobe Stock
+        </p>
+    </footer> 
 </body>
-    <link rel="stylesheet" href="style.css">
-	<link rel="stylesheet" href="bootstrap.min.css">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
-	 crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </html>
