--- a/Evaluation/actions.html
+++ b/Evaluation/actions.html
@@ -46,6 +46,21 @@
     </div>
 
         <div class="container-fluid">
+
+            <button class="btnOpen" id="btnOpen">OUVRIR LA POP UP</button>
+            <!-- POP UP INSCRIPTION -->
+            <div class="overlay" id="overlay">
+                <div class="popup" id="popup">
+                    <h2>
+                        POP UP
+                        <span class="btnClose" id="btnClose">&times;</span>
+                    </h2>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi vero temporibus distinctio voluptas repellat. Inventore, perspiciatis dignissimos quam pariatur saepe doloribus, eaque exercitationem animi sapiente nisi repellat sed maxime sunt!
+                    </p>
+                </div>
+            </div>
+            
         <!-- DISCLAIMER -->
         <section class="content">
             <h3 class="text-center mt-3 mb-3">SITUATION ACTUELLE</h3>
