--- a/Evaluation/don.html
+++ b/Evaluation/don.html
@@ -43,6 +43,20 @@
         </ol>
     </div>
 
+    <button class="btnOpen" id="btnOpen">OUVRIR LA POP UP</button>
+        <!-- POP UP INSCRIPTION -->
+        <div class="overlay" id="overlay">
+            <div class="popup" id="popup">
+                <h2>
+                    POP UP
+                    <span class="btnClose" id="btnClose">&times;</span>
+                </h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi vero temporibus distinctio voluptas repellat. Inventore, perspiciatis dignissimos quam pariatur saepe doloribus, eaque exercitationem animi sapiente nisi repellat sed maxime sunt!
+                </p>
+            </div>
+        </div>
+
     <div class="container-fluid">
         <!--  RÈGLEMENT  -->
         <div class="row mx-2">
@@ -165,8 +179,9 @@
         </p>
     </footer> 
 </body>
+    <script src="script.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+    
 </html>
