JS: all popups done, media queries done

--- a/Evaluation/don.html
+++ b/Evaluation/don.html
@@ -43,19 +43,6 @@
         </ol>
     </div>
 
-    <button class="btnOpen" id="btnOpen">OUVRIR LA POP UP</button>
-        <!-- POP UP INSCRIPTION -->
-        <div class="overlay" id="overlay">
-            <div class="popup" id="popup">
-                <h2>
-                    POP UP
-                    <span class="btnClose" id="btnClose">&times;</span>
-                </h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Commodi vero temporibus distinctio voluptas repellat. Inventore, perspiciatis dignissimos quam pariatur saepe doloribus, eaque exercitationem animi sapiente nisi repellat sed maxime sunt!
-                </p>
-            </div>
-        </div>
 
     <div class="container-fluid">
         <!--  RÈGLEMENT  -->
@@ -153,14 +140,14 @@
                       Je souhaite recevoir la newsletter de WWF France
                     </label>
                   </div>
-                <button class="btn btn-warning col-12 mb-5" type="submit" id="btn-validation">VALIDER MON DON</button>
+                <button class="btn btn-warning col-12 mb-5 mt-3" type="submit" id="btn-validation">VALIDER MON DON</button>
               </form>
     </div>  
 
      <!--FOOTER-->
     <footer class="row d-flex justify-content-center mt-5">
         <div class="row col-6 mx-2 mt-5 list-group list-group-horizontal text-center">
-            <a href="don.html"><span class="shadow list-group-item rounded my-2">FAIRE UN DON
+            <a href="don.html"><span class="btn-warning shadow list-group-item rounded my-2">FAIRE UN DON
             </span></a>
             <a href="join.html"><span class="shadow list-group-item rounded my-2">REJOIGNEZ L'ACTION
             </span></a>
