html, css & js: done, popups done, animations done

--- a/Evaluation/index.html
+++ b/Evaluation/index.html
@@ -99,7 +99,7 @@
                         <p class="text-justify text-center mt-3 p-1">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa excepturi inventore deleniti nulla veritatis laudantium, ut
                             iusto. Architecto beatae ipsam vitae non necessitatibus quas repellendus ad consectetur atque molestias? Iusto.</p>
-                            <p class="text-justify text-center mt-3 p-1 link-to-action">N'hésitez pas à consulter notre <a href="actions.html">Calendrier d'Actions 2021</a></p>    
+                            <p class="text-justify text-center mt-3 p-1 link-to-action">N'hésitez pas à consulter notre <a href="actions.html">Calendrier d'Actions 2020</a></p>    
                     </div>
                 </article>
 
@@ -191,6 +191,12 @@
                     </span></a>
                 </div>
                 <p class="text-center mb-1" id="signature">2020</p>
+                <a href="#navbar" class="back-to-top">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="2.5em" height="2.5em" fill="currentColor" class="bi bi-arrow-up-square" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M14 1H2a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2H2z"/>
+                        <path fill-rule="evenodd" d="M8 12a.5.5 0 0 0 .5-.5V5.707l2.146 2.147a.5.5 0 0 0 .708-.708l-3-3a.5.5 0 0 0-.708 0l-3 3a.5.5 0 1 0 .708.708L7.5 5.707V11.5a.5.5 0 0 0 .5.5z"/>
+                    </svg>
+                </a>
                 <p class="text-center text-justify" id="info">
                     66 % du montant de votre don au profit du WWF peut être déduit de votre impôt sur le revenu. <br>
                     Le Fonds Mondial pour la Nature France, dit WWF France est une Fondation reconnue d'utilité publique. <br>
