--- a/Evaluation/don.html
+++ b/Evaluation/don.html
@@ -24,13 +24,10 @@
                         <a class="nav-link" href="index.html">Accueil</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="#">Nos champs d'actions</a>
+                        <a class="nav-link" href="actions.html">Nos champs d'actions</a>
                     </li>
                     <li class="nav-item mx-2">
-                        <a class="nav-link" href="index.html">Nous rejoindre</a>
-                    </li>
-                    <li class="nav-item mx-2">
-                        <a class="nav-link active" href="index.html">Faire un don</a>
+                        <a class="nav-link active" href="#">Faire un don</a>
                     </li> 
                 </ul>
             </div>  
@@ -134,12 +131,12 @@
                   </div>
                 </div>
 
-                <div class="form-check mb-4">
-                    <input class="form-check-input" type="radio" name="newsletter" id="newsletterInscription" value="option2">
-                    <label class="form-check-label" for="newsletterInscription">
-                      Je souhaite recevoir la newsletter de WWF France
+                <div class="form-check mb-5">
+                    <input class="form-check-input" type="checkbox" id="gridCheck1" checked>
+                    <label class="form-check-label" for="gridCheck1">
+                    Je souhaite recevoir la Newsletter mensuelle
                     </label>
-                  </div>
+                </div>
                 <button class="btn btn-warning col-12 mb-5 mt-3" type="submit" id="btn-validation">VALIDER MON DON</button>
               </form>
     </div>  
@@ -147,9 +144,7 @@
      <!--FOOTER-->
     <footer class="row d-flex justify-content-center mt-5">
         <div class="row col-6 mx-2 mt-5 list-group list-group-horizontal text-center">
-            <a href="don.html"><span class="btn-warning shadow list-group-item rounded my-2">FAIRE UN DON
-            </span></a>
-            <a href="join.html"><span class="shadow list-group-item rounded my-2">REJOIGNEZ L'ACTION
+            <a href="#"><span class="btn-warning shadow list-group-item rounded my-2">FAIRE UN DON
             </span></a>
         </div>
         <p class="text-center mb-1" id="signature">2020</p>
